Added: Job API Docs Swagger
